[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_flo"
version = "0.0.1"
authors = [
  { name="Florian Richter", email="florian2richter@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Florian2Richter/test_package"